--- a/Comments.html
+++ b/Comments.html
@@ -1,14 +1,37 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>
-        html Comments
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Comments</title>
+    <style>
+        /* This is a CSS comment */
+
+        /* Styling for the comments container */
+        .comment-container {
+            background-color: #f0f0f0;
+            padding: 10px;
+            border: 1px solid #ccc;
+            margin: 10px;
+        }
+
+        /* Styling for the comment text */
+        .comment-text {
+            font-style: italic;
+            color: #777;
+        }
+    </style>
 </head>
 
 <body>
-    <!-- this is a comment  -->
+    <!-- This is an HTML comment -->
 
+    <div class="comment-container">
+        <p class="comment-text">This is a comment inside a styled container.</p>
+    </div>
+
+    <p>This is regular content.</p>
 </body>
 
 </html>
