--- a/Heading.html
+++ b/Heading.html
@@ -1,18 +1,64 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>
-        Heading Tag
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heading Formatting Example</title>
+    <style>
+        /* CSS for heading formatting */
+        /* Style for h1 */
+        h1 {
+            color: #007bff;
+            /* Blue color */
+            font-size: 32px;
+            font-weight: bold;
+        }
+
+        /* Style for h2 */
+        h2 {
+            color: #333;
+            /* Dark gray color */
+            font-size: 24px;
+        }
+
+        /* Style for h3 */
+        h3 {
+            color: #ff5733;
+            /* Orange color */
+            font-size: 20px;
+        }
+
+        /* Style for h4 */
+        h4 {
+            color: #666;
+            /* Medium gray color */
+            font-size: 18px;
+        }
+
+        /* Style for h5 */
+        h5 {
+            color: #9900cc;
+            /* Purple color */
+            font-size: 16px;
+        }
+
+        /* Style for h6 */
+        h6 {
+            color: #009900;
+            /* Green color */
+            font-size: 14px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
+    <h1>This is an h1 Heading</h1>
+    <h2>This is an h2 Heading</h2>
+    <h3>This is an h3 Heading</h3>
+    <h4>This is an h4 Heading</h4>
+    <h5>This is an h5 Heading</h5>
+    <h6>This is an h6 Heading</h6>
 </body>
 
 </html>
