--- a/Paragraph.html
+++ b/Paragraph.html
@@ -1,16 +1,42 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>
-        Paragraph Tag
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paragraph Styling Example</title>
+    <style>
+        /* CSS for styling paragraphs */
+        p {
+            font-size: 16px;
+            /* Set the font size */
+            line-height: 1.5;
+            /* Set the line height (spacing between lines) */
+            margin-bottom: 20px;
+            /* Add spacing at the bottom of paragraphs */
+        }
+
+        /* Style for a specific paragraph with a class */
+        .special-paragraph {
+            color: #007bff;
+            /* Blue color */
+            font-weight: bold;
+            /* Make it bold */
+        }
+    </style>
 </head>
 
 <body>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus architecto iure esse officiis,
-        quibusdam sed ratione tempora, dolor ad minus aperiam repudiandae voluptas, iste adipisci id itaque cum quos.
-    </p>
+    <h1>Paragraph Styling Example</h1>
+
+    <!-- Regular paragraph -->
+    <p>This is a regular paragraph. It has default styles applied to it.</p>
+
+    <!-- Styled paragraph with a class -->
+    <p class="special-paragraph">This is a special paragraph with custom styles.</p>
+
+    <!-- Another regular paragraph -->
+    <p>This is another regular paragraph.</p>
 </body>
 
 </html>
