--- a/iframe.html
+++ b/iframe.html
@@ -1,14 +1,28 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>iframe tag</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>iframe Tag</title>
+    <style>
+        /* CSS for styling the video container (optional) */
+        .video-container {
+            max-width: 800px;
+            margin: 20px auto;
+        }
+    </style>
 </head>
 
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/aQvMSYQpMPw" title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+    <h1>iframe tag Example</h1>
+
+    <!-- Container for the video -->
+    <div class="video-container">
+        <!-- Replace 'https://www.youtube.com/embed/HGeKnxf0XIw' with the YouTube embed URL -->
+        <iframe width="100%" height="400" src="https://www.youtube.com/embed/HGeKnxf0XIw" frameborder="0"
+            allowfullscreen></iframe>
+    </div>
 </body>
 
 </html>
