index.html updated

--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
     <div class="container">
         <h2>Links to Other Pages:</h2>
         <ol>
-            <li><a href="../Comments.html">Comments Example</a></li>
-            <li><a href="../form.html">Form Example</a></li>
-            <li><a href="../Formating.html">Formatting Example</a></li>
-            <li><a href="../Heading.html">Heading Example</a></li>
-            <li><a href="../iframe.html">iframe Example</a></li>
-            <li><a href="../images.html">Images Example</a></li>
-            <li><a href="../link.html">Link Example</a></li>
-            <li><a href="../list.html">List Example</a></li>
-            <li><a href="../paragraph.html">Paragraph Example</a></li>
-            <li><a href="../table.html">Table Example</a></li>
+            <li><a href="Comments.html">Comments Example</a></li>
+            <li><a href="form.html">Form Example</a></li>
+            <li><a href="Formating.html">Formatting Example</a></li>
+            <li><a href="Heading.html">Heading Example</a></li>
+            <li><a href="iframe.html">iframe Example</a></li>
+            <li><a href="images.html">Images Example</a></li>
+            <li><a href="link.html">Link Example</a></li>
+            <li><a href="list.html">List Example</a></li>
+            <li><a href="paragraph.html">Paragraph Example</a></li>
+            <li><a href="table.html">Table Example</a></li>
         </ol>
     </div>
 </body>
