--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li><a href="images.html">Images Example</a></li>
             <li><a href="link.html">Link Example</a></li>
             <li><a href="list.html">List Example</a></li>
-            <li><a href="paragraph.html">Paragraph Example</a></li>
+            <li><a href="Paragraph.html">Paragraph Example</a></li>
             <li><a href="table.html">Table Example</a></li>
         </ol>
     </div>
